...

  return (
    <ExampleScreen onBack={navigation.goBack} title="Select">
      <StatusBar style="dark" />
      <View style={styles.stack}>
        <View style={styles.section}>
          <Text style={styles.sectionLabel}>CUSTOM</Text>
          <Select
            onValueChange={setWorkspace}
            testID="select-custom-trigger"
            value={workspace}
          >
            <Select.Trigger>
              <Button variant="secondary">
                <Button.Label>
                  <Select.Value placeholder="Choose workspace" />
...
