appId: com.oreku.reactnativeshowcase
---
- launchApp
- assertVisible: Showcase
- tapOn: Confirmation Dialog
- assertVisible:
    id: progressive-blur-header
- assertVisible: CUSTOM VARIANTS
- assertVisible:
    id: confirmation-dialog-action-sheet
