appId: host.exp.Exponent
---
- openLink: ${METRO_URL}
- extendedWaitUntil:
    visible: COMPONENTS
    timeout: 15000
- assertVisible: Rolling currency
- tapOn:
    id: home-interaction-rolling-currency
- assertVisible: Randomize
- assertNotVisible: LIVE FORMAT
- tapOn:
    id: currency-randomize-button
- assertVisible: Randomize
- tapOn:
    id: currency-back-button
- assertVisible: COMPONENTS
