appId: com.oreku.reactnativeshowcase
---
- launchApp
- assertVisible: Showcase
- tapOn:
    id: home-component-select
- assertVisible:
    id: progressive-blur-header
- assertVisible: CUSTOM
- assertVisible:
    id: select-custom-trigger
