appId: com.oreku.reactnativeshowcase
---
- tapOn:
    id: input-filled
- inputText: "hello@example.com"
- tapOn: Clear input
- hideKeyboard
- scrollUntilVisible:
    element:
      text: COMPOSED SEARCH
    direction: DOWN
- tapOn:
    id: input-composed-search
- inputText: "Button"
- tapOn: Clear input
- hideKeyboard
