appId: com.oreku.reactnativeshowcase
---
- launchApp
- assertVisible: Showcase
- tapOn: Input
- assertVisible: APPEARANCES
- assertVisible:
    id: input-filled
